# src/features/post/post.routes.js
@@ -5,13 +5,17 @@ import { upload } from "../../middlewares/fileupload.middleware.js";
 const postRouter = express.Router();
 
 postRouter.get("/filter", PostController.filterPosts);
+
+postRouter.post("/user/bookmark/:postId", PostController.bookmarkPostToggle);
+postRouter.get("/user/bookmark", PostController.getBookmarkedPosts);
 postRouter.get("/user/:userId", PostController.getByUserId);
-postRouter.put("/:id/archive", PostController.archivePost);
-// postRouter.post("/:id/bookmark", PostController.bookmarkPost);
+
 postRouter.post("/draft", upload.single("image"), PostController.saveAsDraft);
 
 postRouter.get("/", PostController.getAll);
 postRouter.post("/", upload.single("image"), PostController.createPost);
+
+postRouter.put("/:id/archive", PostController.archivePost);
 postRouter.get("/:id", PostController.getById);
 postRouter.put("/:id", upload.single("image"), PostController.updatePost);
 postRouter.delete("/:id", PostController.deletePost);
